// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds actor search views > search gives relevant results 1`] = `
[
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "did": "user(0)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "did": "user(2)",
    "handle": "cara-wiegand69.test",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "did": "user(3)",
    "handle": "carlos6.test",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "did": "user(4)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcderm77.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": [],
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
]
`;

exports[`pds actor search views > typeahead gives relevant results 1`] = `
[
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(0)@jpeg",
    "did": "user(0)",
    "displayName": "Carlton Abernathy IV",
    "handle": "aliya-hodkiewicz.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "did": "user(2)",
    "handle": "cara-wiegand69.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "did": "user(3)",
    "handle": "carlos6.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(0)@jpeg",
    "did": "user(4)",
    "displayName": "Latoya Windler",
    "handle": "carolina-mcderm77.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(7)/cids(0)@jpeg",
    "did": "user(6)",
    "displayName": "Rachel Kshlerin",
    "handle": "cayla-marquardt39.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(9)/cids(0)@jpeg",
    "did": "user(8)",
    "displayName": "Carol Littel",
    "handle": "eudora-dietrich4.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
  {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(11)/cids(0)@jpeg",
    "did": "user(10)",
    "displayName": "Sadie Carter",
    "handle": "shane-torphy52.test",
    "viewer": {
      "blockedBy": false,
      "muted": false,
    },
  },
]
`;
